--- a/styles/home.css
+++ b/styles/home.css
@@ -1,7 +1,7 @@
  .parallax{
 /*Parallax effect.*/
  width: 100%;
- height:95vh;
+ height:100vh;
  
  /* Image URL */
  background-image:url("/images/pics/fcc-camp.png");
@@ -21,16 +21,33 @@ margin-top:20vh;
 
  }
 a.learn-button{
-    background-image: url(/images/darkgreen.svg);
+    background-image: url(/images/colors/yellow.svg);
     color:var(--gray05);
     margin: 50px;
     border: 10px;
 }
 a.learn-button:hover {
-    background-image: url(/images/lightgreen.svg);
+    background-image: url(/images/colors/brown.svg);
     color: var(--gray00);
     margin: 50px;
     border: 10px;
+}
+.main-button {
+    background-image: url(/images/colors/darkgreen.svg);
+    color: var(--gray05);
+    margin: 50px;
+    border: 10px;
+}
+
+.main-button:hover {
+    background-image: url(/images/colors/gray75.svg);
+    color: var(--gray00);
+    margin: 50px;
+    border: 10px;
+}
+/* Spacing for main section*/
+main{
+    margin-top:5%;
 }
 
 /*Color for main main */
@@ -57,21 +74,27 @@ i{
 .img-link {
     width:80%;
     height: auto;
-    float:right;
     box-shadow: 6px 5px var(--gray90);
 }
  .img-link:hover {
     box-shadow: 3px 2px var(--gray90);
 }
+#team-pic{
+    float:right;
+}
 #stuck {
-    width: 80%;
+    
     height: 90%;
     float: left;
 }
+/* News Content */
 .news-content {
     margin-top: 10vh;
     min-height: 60vh;
 
+}
+.news-content p{
+    text-align: justify;
 }
 .news-pic{
     float:right;
@@ -79,4 +102,9 @@ i{
 }
 .news-pic:hover{
      box-shadow: 3px 2px var(--gray90);
+}
+@media only screen and (max-width:800px){
+    .news-pic{
+        width:100%;
+    }
 }
