--- a/styles/base.css
+++ b/styles/base.css
@@ -45,7 +45,7 @@ footer{
   background-color: var(--gray90);
 }
 .footer-button {
-  background-image: url(/images/colors/yellow.svg);
+  background-image: url(/images/colors/darkblue.svg);
   color: var(--gray85);
   margin: 50px;
   border: 10px;
