--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@
  height:100vh;
  
  /* Image URL */
- background-image:url("/images/pics/fcc-wide1.png");
+ background-image:url("/images/pics/fcc-wide.png");
 
  /* Centering and preventing image repetition of background image */
  background-size: cover;
