--- a/styles/home.css
+++ b/styles/home.css
@@ -149,17 +149,41 @@ i{
 .tax-id{
      font-size: 30px;
 }
-
+/* login */
+ #login-pic{
+    width:185%;
+}
+.login-tile{
+    padding: 2rem;
+    height: 100%;
+    max-width:50%;
+    border-width: 100px;
+    border: 3px var(--gray90) solid;
+}
+.login-link{
+    color: var(--gray00);
+}
+.login-link:hover, .login-link:focus{
+     color: var(--gray15);
+}
+.google{
+    background: red;
+}
+.github{
+    background: #000;
+}
+.facebook{
+    background: blue;
+}
+.email{
+    background: var(--darkgreen);
+}
 /* learn page */
 .learn-item {
     max-height: 200px;
     width: 400px;
     image-orientation: from-image;
 }
-.learn-item:focus, .learn-item:hover{
-
-}
-
 #last-img {
     margin-top: 3%;
     margin-bottom: 7%;
@@ -167,19 +191,13 @@ i{
 .text{
     color: var(--gray00);
 }
-.overlay:hover, .overlay:focus{
-    position: relative;
-    
-    bottom:0;
-     bottom: 0;
-     color: #fff;
-     left: 0;
-     opacity: 0.8;
-    background-color:var(--grey05);
+
+.square{
+    width:200px;
 }
-
-
-
+.signin-footer{
+    margin-top:30vh;
+}
 
 
 @media only screen and (max-width:600px) {
@@ -195,7 +213,9 @@ i{
 }
 
 @media only screen and (max-width:900px){
- 
+  #login-pic {
+      width: 85%;
+  }
      .parallax-content {
         
         margin: 1vh 5vw;
